[package]
name = "wtinetwork"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.45.1", features = ["gossipsub", "tcp", "yamux", "identity"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocksdb = "0.18"
warp = "0.3"

