[package]
name = "wtid-network"
version = "0.2.0"
edition = "2021"
authors = ["WolfTech Innovations"]
description = "A P2P network implementation with gateway layer for WTID Local Mapping System"
license = "MIT"

[dependencies]
# Networking
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "relay",
    "yamux",
    "macros",
    "request-response",
    "ping",
    "tokio",
] }

# Async Runtime
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
] }

# Web Framework
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

# Cryptography
ring = "0.17"
rand = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = { version = "0.14", features = ["yaml"] }
dotenv = "0.15"

# Metrics and Monitoring (Optional)
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sled = "0.34"
bincode = "1.3"

# Testing
mockall = { version = "0.12", optional = true }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.4"
quickcheck = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "network_benchmarks"
harness = false
required-features = ["criterion"]

[features]
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
testing = ["dep:mockall"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
